2003-03-03 Mariusz Woloszyn
	* library.c: enabled getting config support;
	  curently only getting batery level is supported;
	* ptp-pack.c: "finished" Device Property Describing Dataset
	  unpacking function ptp_unpack_DPD();
	* ptp.h: changed PTP_DC_* to PTP_DTC_* (DTC stands for DataType Code);
	  changed PTPDevicePropDesc fields name;
	* ptp.c: added ptp_getdevicepropvalue() (not working properly yet);
2003-04-01 Mariusz Woloszyn
	* library.c: added Kodak CX4200 explicite support;
	  added some get config code (it's not enabled, nor finished yet);
	  added some extra debug info about events and properties supported
	* ptp-pack.c: intoduced ptp_unpack_DPD (not finished yet)
	* ptp.c: added ptp_getdevicepropdesc()
	* ptp.h: introduced some device property describing structures and
	  constants
2003-03-29 Mariusz Woloszyn
	* library.c: enabled downloading of nonimage files
	* ptp.c: fixed a bug in capture code
2003-03-29 Mariusz Woloszyn
	* library.c: enabled back capture image support
2003-03-29 Mariusz Woloszyn
	* ptp.h: added Nparam field to PTPContainer
	* ptp.c: using Nparam field we send requests with only used params
	  to the camera (although specs says it's legal, some cameras do not
	  like it)
2003-03-29 Mariusz Woloszyn
	* ptp.c: fixed a memcopy size bug
2003-03-27 Mariusz Woloszyn
        * library.c: added HP PhotoSmart 320
2003-01-08 Mariusz Woloszyn
	* ptp.c: cosmetic
	* ptp-pack.c: fixed a bug in ptp_unpack_DI(), totallen could be
	  bigger than uint8_t
	* library.c:  added camera summary

2003-01-08 Mariusz Woloszyn
	* ptp-pack.c:
	* ptp.c: fixed buggy ptp_usb_senddata()

2003-01-06 Mariusz Woloszyn
	* updated some comments, added some extra debug and introduced
	  support for senobjectinfo and sendobject.
	* Makefile.am: changed driver name to ptp2

2003-01-03 Mariusz Woloszyn
	* Commited version 2 of libptp2 and ptp driver.
	  This code is unfinished yet, but it's meant to be transport layer
	  independent. It fixes a lot of other bugs also.
